Corrections based on some test cases and finishing the project